2005-11-21  Raja R Harinath  <rharinath@novell.com>

	* scripts/Makefile.am (bin_SCRIPTS): Move 'gmcs' to ...
	(scripts_2_0): ... here.
	(gmcs): Remove special-case rule.

2005-11-09 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* data/net_1_1/machine.config, data/net_2_0/machine.config: Set 
	default values for http proxy

2005-11-07  Zoltan Varga  <vargaz@gmail.com>

	* docs/jit-regalloc: Merge forgotten documentation updates from
	the mini-xp-local-regalloc branch.

2005-10-28  Wade Berrier <wberrier@novell.com>

	* mono.pc.in, mint.pc.in, configure.in: Make these relocatable.
	* scripts: Makefile.am mono-nunit.pc.in script.in mono-service.in 
	Make all the wrappers relocatable.

2005-10-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add test for execinfo.h.

2005-10-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New.  Make 'distcheck'
	compile with the 'monolite' in the distribution tarball.
	(compiler-tests-net_2_0): Avoid deleting
	$(mcs_topdir)/build/common/Consts.cs.

2005-10-20  Robert Jordan  <robertj@gmx.net>

	* data/net_2_0/machine.config: Added IPC channel templates.

2005-10-11  John Luke  <john.luke@gmail.com>

	* man/monop.1: update for new monop options
	
2005-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix up problems with the latest libtool on win32.

2005-10-04  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove 'Globalization:' entry from final message.

2005-09-27  Raja R Harinath  <rharinath@novell.com>

	* configure.in (BUILD_MCS): New automake conditional.  Used to
	disable building the mcs/ tree if cross-compiling.
	(CROSS_COMPILING): New automake conditional.
	($mcsdir/build/config.make): Don't clobber when cross-compiling.
	(GLIB_CFLAGS, GLIB_LIBS, GMODULE_CFLAGS, GMODULE_LIBS):
	Define even when cross-compiling.
	* runtime/Makefile.am (all-local, install, uninstall, clean-local):
	Disable building in the mcs/ tree if !BUILD_MCS.
