@@ -1237,6 +1237,10 @@ if test x$platform_win32 = xno; then
 	 #endif
 	])
 	AC_CHECK_HEADERS([termios.h])
+
+	dnl * This is provided in io-layer, but on windows it's only available
+	dnl * on xp+
+	AC_DEFINE(HAVE_GETPROCESSID, 1, [Define if GetProcessId is available])
 else
 	jdk_headers_found=no
 	AC_CHECK_LIB(ws2_32, main, LIBS="$LIBS -lws2_32", AC_ERROR(bad mingw install?))
@@ -1270,6 +1274,7 @@ else
 			AC_MSG_RESULT(no)
 		])
 	])
+	AC_CHECK_FUNCS(GetProcessId)
 fi
 
 dnl socklen_t check
