@@ -172,6 +172,7 @@ extern gboolean CreateProcess (const gunichar2 *appname,
 			       WapiStartupInfo *startup,
 			       WapiProcessInformation *process_info);
 extern gpointer GetCurrentProcess (void);
+extern guint32 GetProcessId (gpointer handle);
 extern guint32 GetCurrentProcessId (void);
 extern gboolean EnumProcesses (guint32 *pids, guint32 len, guint32 *needed);
 extern gpointer OpenProcess (guint32 access, gboolean inherit, guint32 pid);
