@@ -750,7 +750,11 @@ MonoBoolean ves_icall_System_Diagnostics_Process_ShellExecuteEx_internal (MonoPr
 		/* It appears that there's no way to get the pid from a
 		 * process handle before windows xp.  Really.
 		 */
+#ifdef HAVE_GETPROCESSID
+		process_info->pid = GetProcessId (shellex.hProcess);
+#else
 		process_info->pid = 0;
+#endif
 		process_info->tid = 0;
 	}
 
