@@ -1,3 +1,7 @@
+2005-11-24  Dick Porter  <dick@ximian.com>
+
+	* configure.in: Test for GetProcessId() on windows
+
 2005-11-21  Raja R Harinath  <rharinath@novell.com>
 
 	* scripts/Makefile.am (bin_SCRIPTS): Move 'gmcs' to ...
